[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Felix Hillebrand <astraljaeger@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
env-var = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


