[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Felix Hillebrand <astraljaeger@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
env-var = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


